fjord-compiler/test/errors/polymorphism/InconsistentReturn.fj
module errors.parametricPolymorphism.InconsistentReturn

import TestUtil

id : a. a -> a
id x =
  rm x 5
